src/app/bridge.h

// Spawn a new attyx window (new instance via NSWorkspace, or fork for Linux/dev).
void attyx_spawn_new_window(void);
// Send keyboard input to the PTY (called from main/Cocoa thread).
// Implemented in Zig (terminal.zig).
void attyx_send_input(const uint8_t* bytes, int len);
// Clear screen and scrollback (Cmd+K / Ctrl+Shift+K).
// Signals the PTY thread to clear the engine state directly and send
// a form feed to the shell for prompt redraw.
void attyx_clear_screen(void);
// Viewport scrollback: 0 = pinned to bottom (live screen), >0 = scrolled up.
// Called from main thread (scroll wheel / keyboard); PTY thread reads and bumps.
extern volatile int g_viewport_offset;
extern volatile int g_scrollback_count;
extern volatile int g_alt_screen;
// Adjust viewport offset by delta lines. Clamps to [0, g_scrollback_count].
// Marks all rows dirty so the renderer redraws.
void attyx_scroll_viewport(int delta);
// Mark all rows dirty (used after viewport changes).
void attyx_mark_all_dirty(void);
extern volatile int g_sel_active;
// ---------------------------------------------------------------------------
// Copy/Visual mode (keyboard-driven selection, tmux-style)
// ---------------------------------------------------------------------------
extern volatile int g_copy_mode;        // 0=off,1=nav,2=vchar,3=vline,4=vblock
void attyx_copy_mode_enter(void);
extern volatile int  g_font_size;       // points
extern volatile int  g_default_font_size; // config default (for Cmd+0 reset)
extern volatile int  g_search_query_len;
extern volatile int  g_search_active;       // 1 = search bar open
extern volatile int  g_search_gen;          // bumped on each query change
// Navigation: UI thread atomically adds +1 (next) or -1 (prev); PTY thread
// atomically reads-and-resets to 0 after processing.
extern volatile int  g_search_nav_delta;
void attyx_search_cmd(int cmd);  // 1=backspace 2=delete 3=left 4=right 5=home 6=end 7=dismiss 8=next 9=prev
void attyx_toggle_command_palette(void);
void attyx_toggle_theme_picker(void);
// Set g_needs_reload_config = 1. Safe to call from any thread (signal-safe).
// Implemented in Zig (terminal.zig).
void attyx_trigger_config_reload(void);
// Set to 1 by PTY thread when font config changes (family, size, fallbacks, cell dims).
// Main render thread reads, rebuilds the glyph cache + resizes window, then clears.
extern volatile int g_needs_font_rebuild;
void attyx_toggle_debug_overlay(void);
void attyx_toggle_anchor_demo(void);
void attyx_toggle_ai_demo(void);
void attyx_toggle_session_switcher(void);
void attyx_create_session_direct(void);
extern volatile int      g_popup_active;        // 1 = popup visible, input routed there
// Dispatch an action on the pane at the given grid position (for context menus).
void attyx_context_menu_action(uint8_t action_id, int col, int row);
// Sequence result (valid after attyx_keybind_match returns send_sequence)
extern const uint8_t* g_keybind_matched_seq;
extern volatile int    g_keybind_matched_seq_len;
// ---------------------------------------------------------------------------
// Unified action dispatch (implemented in Zig dispatch.zig)
// ---------------------------------------------------------------------------

// Dispatch a keybind action. Returns 1 if consumed, 0 if key should pass through.
uint8_t attyx_dispatch_action(uint8_t action);
// Platform-specific callbacks (implemented in platform_macos.m / platform_linux.c)
void attyx_platform_close_window(void);
// ---------------------------------------------------------------------------
// Globals used by dispatch (defined in platform C files)
// ---------------------------------------------------------------------------

extern volatile int g_mouse_tracking;
extern int g_rows;
// Tab management (called from input thread via keybind dispatch)
void attyx_tab_action(int action);
// Split pane management (called from input thread via keybind dispatch)
void attyx_split_action(int action);
extern volatile int g_split_active; // 1 when active tab has >1 pane
// Input routing (called from input thread when g_popup_active)
void attyx_popup_send_input(const uint8_t* bytes, int len);
void attyx_popup_toggle(int index);