src/app/linux_internal.h

// ---------------------------------------------------------------------------
// Clipboard
// ---------------------------------------------------------------------------

void attyx_platform_copy(void);
void attyx_platform_paste(void);